--- a/template.env
+++ b/template.env
@@ -1,3 +1,8 @@
 # Access token hat has to match with the one sent in an http request
 ACCESS_TOKEN=''
 PORT=4280
+
+# Credentials for access to the AWS
+AWS_ACCESS_KEY_ID=''
+AWS_SECRET_ACCESS_KEY=''
+AWS_DEFAULT_REGION='eu-central-1'
