--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "npx tsc && echo 'Production build available in lib folder'",
     "start": "npx tsc && npx node -r dotenv/config lib/index.js",
     "test": "npx node -r ./helpers/loadIntegrationEnv.js node_modules/jest/bin/jest",
-    "lint": "npx tslint --project . && echo 'No issues found'"
+    "lint": "eslint --max-warnings 0 --ext .js,.ts,.tsx,.jsx . && echo 'No issues found'"
   },
   "repository": {
     "type": "git",
@@ -35,13 +35,14 @@
     "@types/express": "^4.17.4",
     "@types/jest": "^25.2.1",
     "@types/node": "^13.11.0",
+    "@typescript-eslint/eslint-plugin": "^2.27.0",
+    "@typescript-eslint/parser": "^2.27.0",
+    "eslint": "^6.8.0",
+    "eslint-plugin-jest": "^23.8.2",
     "jest": "^25.3.0",
     "supertest": "^4.0.2",
     "ts-jest": "^25.3.1",
     "ts-node": "^8.8.2",
-    "tslint": "^6.1.1",
-    "tslint-eslint-rules": "^5.4.0",
-    "tslint-lines-between-class-members": "^1.3.6",
     "typescript": "^3.8.3"
   }
 }
