Add email notification service

--- a/integration.env
+++ b/integration.env
@@ -1,5 +1,8 @@
 ACCESS_TOKEN='random_string'
 PORT=4280
+
 AWS_ACCESS_KEY_ID='aws_access_key'
 AWS_SECRET_ACCESS_KEY='aws_secret_key'
 AWS_DEFAULT_REGION='eu-central-1'
+
+VERIFIED_EMAIL_ADDRESS='noreply@test.com'
