--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "build": "npx tsc && echo 'Production build available in lib folder'",
     "start": "npx tsc && npx node -r dotenv/config lib/index.js",
-    "test": "npx node -r ./helpers/loadIntegrationEnv.js node_modules/jest/bin/jest",
+    "test": "npx node -r ./helpers/loadIntegrationEnv.js node_modules/jest/bin/jest --verbose --silent",
     "lint": "eslint --max-warnings 0 --ext .js,.ts,.tsx,.jsx . && echo 'No issues found'"
   },
   "repository": {
