--- a/template.env
+++ b/template.env
@@ -6,3 +6,6 @@ PORT=4280
 AWS_ACCESS_KEY_ID=''
 AWS_SECRET_ACCESS_KEY=''
 AWS_DEFAULT_REGION='eu-central-1'
+
+# Sender address for email notifications
+VERIFIED_EMAIL_ADDRESS=''
