--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "npx tsc && echo 'Production build available in lib folder'",
     "start": "npx tsc && npx node -r dotenv/config lib/index.js",
     "test": "npx node -r ./helpers/loadIntegrationEnv.js node_modules/jest/bin/jest --verbose --silent",
-    "lint": "eslint --max-warnings 0 --fix --ext .js,.ts,.tsx,.jsx . && echo 'No issues found'"
+    "lint": "eslint --max-warnings 0 --fix . && echo 'No issues found'"
   },
   "repository": {
     "type": "git",
@@ -33,16 +33,16 @@
   "devDependencies": {
     "@types/aws-sdk": "^2.7.4",
     "@types/express": "^4.17.23",
-    "@types/jest": "^30.0.0",
-    "@types/node": "^24.0.13",
-    "@typescript-eslint/eslint-plugin": "^8.37.0",
-    "@typescript-eslint/parser": "^8.37.0",
-    "eslint": "^9.31.0",
-    "eslint-plugin-jest": "^29.0.1",
-    "jest": "^30.0.4",
+    "@types/jest": "^27.5.2",
+    "@types/node": "^16.18.14",
+    "@typescript-eslint/eslint-plugin": "^5.62.0",
+    "@typescript-eslint/parser": "^5.62.0",
+    "eslint": "^8.56.0",
+    "eslint-plugin-jest": "^27.2.1",
+    "jest": "^27.5.1",
     "supertest": "^4.0.2",
-    "ts-jest": "^29.4.0",
+    "ts-jest": "^27.1.5",
     "ts-node": "^8.10.2",
-    "typescript": "^5.8.3"
+    "typescript": "^4.9.5"
   }
 }
